# OpenGGS-emscripten

./: CMakeLists.txt  Emscripten.md
src/: Audio.cpp  Audio.hpp  CMakeLists.txt  CONTENT_Gametype_Load.cpp  CONTENT_Stages_Load_Write.cpp  ContentManager.cpp  ContentManager.hpp  ENEMIES_Move.cpp  GRAPHICS_Sprites_Bullets.cpp  GRAPHICS_Sprites_Move.cpp  GRAPHICS_Tiles_Animations.cpp  GameEnvironment.cpp  GameEnvironment.hpp  LOOP_Editor_Stages.cpp  LOOP_Editor_Tiles.cpp  LOOP_Gameloop.cpp  LOOP_Menu.cpp  LOOP_Options.cpp  LOOP_Stagefile_Load.cpp  PLAYER.cpp  PLAYER_Collision_NonSolids.cpp  PLAYER_Collision_Solids_Specials.cpp  PLAYER_Collision_Sprites.cpp  PLAYER_Jump.cpp  PLAYER_Killed.cpp  PLAYER_Run.cpp  SYSTEM_Input_General.cpp  TODO.txt  globals.h  main.cpp  main.cpp.bak
